--- a/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
+++ b/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
@@ -12,7 +12,7 @@
   isoform:$isoform-name :mapping :$mapping-iri .
  
   :$mapping-iri rdf:type :PeptideMapping ;  
-    :peptideName "$pep-name"^^xsd::string ;
+    :peptideName "$pep-name"^^xsd:string ;
 #foreach($pos in $spec.positions)
     :position [ 
       :start "$pos.first"^^xsd:integer ;
