added  rdf:type Evidence to peptide mapping evidence

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
@@ -21,6 +21,7 @@
 #end
 #foreach($evi in $pep.evidences)
     :withEvidence [
+      rdf:type :Evidence ;
       :assignedBy source:$StringUtils.slug($evi.assignedBy) ;
       :reference [
         a :Xref ;
