gave a :EXP type to the evidence too

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
@@ -22,6 +22,7 @@
 #foreach($evi in $pep.evidences)
     :withEvidence [
       rdf:type :Evidence ;
+      :code :EXP;
       :assignedBy source:$StringUtils.slug($evi.assignedBy) ;
       :reference [
         a :Xref ;
