added a new rdf:type :MappingPosition to avoid having blahknodes in HELP for :PeptideMapping and :AntibodyMapping

--- a/web/src/main/webapp/WEB-INF/velocity/turtle/antibody-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/antibody-list.ttl.vm
@@ -15,13 +15,14 @@
     rdf:type :AntibodyMapping ;  
 #foreach($xref in $antibody.xrefs)
     :reference [
-      a :Xref ;
+      rdf:type :Xref ;
       :provenance db:$StringUtils.slug($xref.databaseName) ;
       :accession "$xref.accession"^^xsd:string ;
     ];
 #end
 #foreach($pos in $spec.positions)
     :position [ 
+      rdf:type :MappingPosition ;
       :start "$pos.first"^^xsd:integer ;
       :end "$pos.second"^^xsd:integer ;
     ];
