--- a/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
@@ -21,7 +21,7 @@
     ];
 #end
 #foreach($evi in $pep.evidences)
-    :withEvidence [
+    :evidence [
       rdf:type :Evidence ;
       :code :EXP;
       :assignedBy source:$StringUtils.slug($evi.assignedBy) ;
