proteotypic is now a member of the PeptideMapping pogo so it's available for free with jackson

--- a/web/src/main/webapp/WEB-INF/velocity/peptide-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/peptide-list.xml.vm
@@ -1,9 +1,7 @@
 <mapping-category category='peptide-mapping' hierarchy='mapping'>
 	#foreach($peptide in $entry.peptideMappings)
 		<peptide-mapping>
-			<peptide accession='$peptide.peptideUniqueName' database='neXtProt' 
-				is-proteotypic=#if($NXUtils.isNaturalAndProteotypic($peptide))'true'#else'false' #end
-			/> 
+			<peptide accession='$peptide.peptideUniqueName' database='neXtProt' is-proteotypic='$peptide.isProteotypic()' /> 
 ##			#if($peptide.properties && $peptide.properties.size() > 0) 													
 ##				<properties>
 ##					#foreach($prop in $peptide.properties)
