SRM peptides and natural peptides are separate lists in Entry domain pogo, services & controllers adapted, templates for XML as well (adapt t/l remain to be done)

--- a/web/src/main/webapp/WEB-INF/velocity/srm-peptide-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/srm-peptide-list.xml.vm
@@ -1,7 +1,7 @@
-<mapping-category category='peptide-mapping' hierarchy='mapping'>
-	#foreach($peptide in $entry.peptideMappings)
+<mapping-category category='srm-peptide-mapping' hierarchy='mapping'>
+	#foreach($peptide in $entry.srmPeptideMappings)
 		<peptide-mapping>
-			<peptide accession='$peptide.peptideUniqueName' database='neXtProt' is-proteotypic='$peptide.isProteotypic()' is-natural='$peptide.isNatural()'/> 
+			<peptide accession='$peptide.peptideUniqueName' database='neXtProt' is-proteotypic='$peptide.isProteotypic()' is-synthetic='$peptide.isSynthetic()' /> 
 ##			#if($peptide.properties && $peptide.properties.size() > 0) 													
 ##				<properties>
 ##					#foreach($prop in $peptide.properties)
