--- a/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
@@ -24,7 +24,7 @@
 #foreach($evi in $pep.evidences)
     :evidence [
       rdf:type :Evidence ;
-      :code :EXP;
+      :evidenceCode :EXP;
       :assignedBy source:$StringUtils.slug($evi.assignedBy) ;
       :reference [
         a :Xref ;
