--- a/web/src/main/webapp/WEB-INF/velocity/turtle/srm-peptide-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/srm-peptide-list.ttl.vm
@@ -1,17 +1,17 @@
 
-# Peptides mappings
+# SRM Peptides mappings
 
 #foreach($isoform in $entry.getIsoforms())
 #set($isoform-name =  $isoform.getUniqueName())
-#foreach($pep in $entry.getPeptidesByIsoform($isoform-name))
+#foreach($pep in $entry.getSrmPeptidesByIsoform($isoform-name))
 #set($pep-name=$pep.peptideUniqueName) 
-#set($mapping-iri="NATUR-"+$pep-name+"-"+$isoform-name)
+#set($mapping-iri="SYNTH-"+$pep-name+"-"+$isoform-name)
 #foreach($spec in $pep.isoformSpecificity.values())
 #if ($spec.isoformName==$isoform-name) 
   isoform:$isoform-name :positionalAnnotation :$mapping-iri .
   isoform:$isoform-name :mapping :$mapping-iri .
-  isoform:$isoform-name :peptideMapping :$mapping-iri .
-  :$mapping-iri rdf:type :PeptideMapping ;  
+  isoform:$isoform-name :srmPeptideMapping :$mapping-iri .
+  :$mapping-iri rdf:type :SrmPeptideMapping ;  
     :peptideName "$pep-name"^^xsd:string ;
     :proteotypic "$pep.isProteotypic()"^^xsd:boolean ;
 #foreach($pos in $spec.positions)
