In velocity templates, set default gene and protein name as '-' in fasta export

--- a/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
@@ -1,12 +1,12 @@
 #if(  $entry.getOverview().hasMainProteinName() )
     #set ( $protName = $entry.getOverview().getMainProteinName() )
 #else
-    #set ( $protName = "NA" )
+    #set ( $protName = "-" )
 #end
 #if(  $entry.getOverview().hasMainGeneName() )
     #set ( $geneName = $entry.getOverview().getMainGeneName() )
 #else
-    #set ( $geneName = "NA" )
+    #set ( $geneName = "-" )
 #end
 #foreach($isoform in $entry.isoforms)
 >nxp|$isoform.getUniqueName()|$geneName|$protName|$isoform.formatIsoformId()
