Remove deprecated method formatIsoformId() in NXVelocityUtils

--- a/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
@@ -9,6 +9,6 @@
     #set ( $geneName = "-" )
 #end
 #foreach($isoform in $entry.isoforms)
->nxp|$isoform.getUniqueName()|$geneName|$protName|$isoform.formatIsoformId()
+>nxp|$isoform.getUniqueName()|$geneName|$protName|$isoform.getMainEntityName().getValue()
 $StringUtils.wrapText($isoform.getSequence(), 60)
 #end
