fixing bug of issue calipho-misc 229

--- a/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
@@ -1,12 +1,18 @@
 #if(  $entry.getOverview().hasMainProteinName() )
-    #set ( $protName = $entry.getOverview().getMainProteinName() )
+#set ( $protName = $entry.getOverview().getMainProteinName() )
 #else
-    #set ( $protName = "-" )
+#set ( $protName = "-" )
 #end
-#if(  $entry.getOverview().hasMainGeneName() )
-    #set ( $geneName = $entry.getOverview().getMainGeneName() )
+#if($entry.getOverview().hasMainGeneName() )
+#foreach($gn in $entry.overview.geneNames)
+#if(!$geneName)
+#set ($geneName = $gn.name)##First time or only one Gene
 #else
-    #set ( $geneName = "-" )
+#set ($geneName = $geneName + ";" + $gn.name)##For all other gene names (it may happen -> 135 entries like this)
+#end
+#end
+#else
+#set ($geneName = "-" )##When there is no gene name
 #end
 #foreach($isoform in $entry.isoforms)
 >nxp|$isoform.getUniqueName()|$geneName|$protName|$isoform.getMainEntityName().getValue()
