--- a/web/src/main/webapp/WEB-INF/velocity/genomic-mapping-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/genomic-mapping-list.xml.vm
@@ -1,5 +1,7 @@
 <genomic-mapping-list>
 	#foreach($genomicMapping in $entry.genomicMappings)
+		#if(!$genomicMapping.isVirtual())
 		#parse("genomic-mapping.xml.vm")
+		#end
 	#end
 </genomic-mapping-list>
