--- a/web/src/main/webapp/WEB-INF/velocity/srm-peptide-list.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/srm-peptide-list.xml.vm
@@ -5,7 +5,7 @@
 ##			#if($peptide.properties && $peptide.properties.size() > 0) 													
 ##				<properties>
 ##					#foreach($prop in $peptide.properties)
-##						<property property-name="$prop.name" value="$prop.value"/>
+##						<property name="$prop.name" value="$prop.value"/>
 ##					#end
 ##				</properties>
 ##			#end
