--- a/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/peptide-list.ttl.vm
@@ -14,13 +14,11 @@
   :$mapping-iri rdf:type :PeptideMapping ;  
     :peptideName "$pep-name"^^xsd:string ;
     :proteotypic "$pep.isProteotypic()"^^xsd:boolean ;
-#foreach($pos in $spec.positions)
-    :position [ 
-      rdf:type :MappingPosition ;    
-      :start "$pos.first"^^xsd:integer ;
-      :end "$pos.second"^^xsd:integer ;
-    ];
-#end
+  :position [
+    rdf:type :MappingPosition ;
+    :start "$spec.getFirstPosition()"^^xsd:integer ;
+    :end "$spec.getLastPosition()"^^xsd:integer ;
+  ];
 #foreach($evi in $pep.evidences)
     :evidence [
       rdf:type :Evidence ;
