--- a/web/src/main/webapp/WEB-INF/velocity/genomic-mapping.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/genomic-mapping.xml.vm
@@ -2,6 +2,7 @@
 	<isoform-mapping-list>
 		#foreach($isoformMapping in $genomicMapping.isoformMappings)
 		<isoform-mapping accession="$isoformMapping.uniqueName" main-name="$isoformMapping.isoform.mainEntityName.value">
+			#if(!$isoformMapping.getTranscriptMappings().isEmpty())
 			<transcript-mapping-list>
 				#foreach($transcriptMapping in $isoformMapping.transcriptMappings)
 				<transcript-mapping accession='$transcriptMapping.accession' database='$transcriptMapping.database' quality='$transcriptMapping.quality'>
@@ -22,6 +23,7 @@
 				</transcript-mapping>
 				#end
 			</transcript-mapping-list>
+			#end
 		</isoform-mapping>
 		#end
 	</isoform-mapping-list>
