--- a/web/src/main/webapp/WEB-INF/velocity/genomic-mapping.xml.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/genomic-mapping.xml.vm
@@ -9,9 +9,7 @@
 					<transcript-protein accession='$transcriptMapping.proteinId' database='$transcriptMapping.database'/>
 					<exon-list>
 						#foreach($exon in $transcriptMapping.exons)
-							### TODO: transcript mapping should have valid exons
-							#if($exon.codingStatus)
-			   			<exon rank='$exon.rank' coding-status='$exon.codingStatus' accession='$exon.accession' database='$transcriptMapping.database'>
+			   			<exon rank='$exon.rank' #if($exon.codingStatus)coding-status='$exon.codingStatus'#end accession='$exon.accession' database='$transcriptMapping.database'>
 							<position-on-gene begin='$exon.firstPositionOnGene' end='$exon.lastPositionOnGene' />
 							#if($exon.getFirstAminoAcid())
 								<amino-acid rank='first' sequence-position='$exon.firstAminoAcid.position' phase='$exon.firstAminoAcid.phase' value='$exon.firstAminoAcid.base'/>
@@ -20,7 +18,6 @@
                 				<amino-acid rank='last' sequence-position='$exon.lastAminoAcid.position' phase='$exon.lastAminoAcid.phase' value='$exon.lastAminoAcid.base'/>
                 			#end
               			</exon>
-							#end
 						#end
 					</exon-list>
 				</transcript-mapping>
