--- a/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/fasta/entry.fasta.vm
@@ -15,6 +15,6 @@
 #set ($geneName = "-" )##When there is no gene name
 #end
 #foreach($isoform in $entry.isoforms)
->nxp|$isoform.getUniqueName()|$geneName|$protName|$isoform.getMainEntityName().getValue()${CR}
-$StringUtils.wrapText($isoform.getSequence(), 60)${CR}
+>nxp|$isoform.getUniqueName()|$geneName|$protName|$isoform.getMainEntityName().getValue()$StringUtils.getCR()
+$StringUtils.wrapText($isoform.getSequence(), 60)$StringUtils.getCR()
 #end
