--- a/web/src/main/webapp/WEB-INF/velocity/turtle/antibody-list.ttl.vm
+++ b/web/src/main/webapp/WEB-INF/velocity/turtle/antibody-list.ttl.vm
@@ -2,15 +2,15 @@
 # Antibodies mappings
 
 #foreach($isoform in $entry.getIsoforms())
-#set($isoform-name =  $isoform.getUniqueName())
-#foreach($antibody in $entry.getAntibodiesByIsoform($isoform-name))
+#set($isoform-ac =  $isoform.getUniqueName())
+#foreach($antibody in $entry.getAntibodiesByIsoform($isoform-ac))
 #set($antibody-name=$antibody.antibodyUniqueName) 
-#set($mapping-iri=$antibody-name+"-"+$isoform-name)
+#set($mapping-iri=$antibody-name+"-"+$isoform-ac)
 #foreach($spec in $antibody.isoformSpecificity.values())
-#if ($spec.isoformName==$isoform-name) 
-  isoform:$isoform-name :positionalAnnotation :$mapping-iri .
-  isoform:$isoform-name :mapping :$mapping-iri .
-  isoform:$isoform-name :antibodyMapping :$mapping-iri .
+#if ($spec.isoformAccession==$isoform-ac) 
+  isoform:$isoform-ac :positionalAnnotation :$mapping-iri .
+  isoform:$isoform-ac :mapping :$mapping-iri .
+  isoform:$isoform-ac :antibodyMapping :$mapping-iri .
   :$mapping-iri 
     rdf:type :AntibodyMapping ;  
 	:antibodyName "$antibody.antibodyUniqueName"^^xsd:string ;
